[gd_scene format=3 uid="uid://b8ltechdmqr3c"]

[ext_resource type="FontFile" uid="uid://dxe7owqfwqgt3" path="res://letter/ARCADECLASSIC.TTF" id="1_2drh3"]
[ext_resource type="Script" uid="uid://ciwb2r3uo2mri" path="res://scenes/ui/winner/winner.gd" id="1_i6ioy"]

[node name="Winner" type="Control" unique_id=1919460839]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6ioy")

[node name="Background" type="ColorRect" parent="." unique_id=1454485414]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="TitleLabel" type="Label" parent="." unique_id=431346481]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 56.0
offset_right = 1.0
offset_bottom = -387.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_2drh3")
theme_override_font_sizes/font_size = 200
text = "You Win"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="." unique_id=1768750657]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 416.0
offset_top = 362.0
offset_right = -421.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NextLevelButton" type="Button" parent="Buttons" unique_id=1116096431]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2drh3")
theme_override_font_sizes/font_size = 50
text = "Next level"

[node name="MenuButton" type="Button" parent="Buttons" unique_id=1153694418]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2drh3")
theme_override_font_sizes/font_size = 50
text = "menu
"

[connection signal="pressed" from="Buttons/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_return_button_pressed"]
